syntax = "proto3";

option go_package = "./proto";

package proto;

message Device {
    string id = 1;
    string user_id = 2;
    int64 tick = 3;
    string model = 4;
    double speed = 5;
    double battery = 6;
    double latitude = 7; 
    double longitude = 8; 
    double elevation = 9;
    double bearing = 10;
    double current_distance = 11;
    double total_distance = 12;
    DMS lat = 13;
    DMS lon = 14;
    UTM utm = 15;
    repeated Sensor sensors = 16;
    map<string, string> props = 17;
    string descr = 18;
    bool online = 19;
}

message Sensor {
    string name = 1;
    double val_x = 2;
    double val_y = 3;
}

message DMS {
  int64 degrees = 1;
  int64 minutes = 2;
  double seconds = 3;
  string direction = 4;
}

message UTM {
   double central_meridian = 1;
   double easting = 2;
   double northing = 3;
   int64 LongZone = 4;
   string LatZone = 5;
   string hemisphere = 6;
   int64 srid = 7;
}
